--- a/gruntjs3/src/index.html
+++ b/gruntjs3/src/index.html
@@ -7,18 +7,21 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Pacifico&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="@@ENDERECO_DO_CSS">
+        <!-- A substituição será feita pelo Grunt -->
+        <link rel="stylesheet" href="@@ENDERECO_DO_CSS"> <!-- Substituído para apontar para o caminho correto do CSS em 'dev' -->
+
     </head>
 <body>
     <main>
         <h1>Sorteador</h1>
-        <form>
+        <form id="form-sorteador">
             <div>
                 <label for="numero-maximo">Número máximo</label>
-                <input type="number" id="numero-maximo">
+                <input type="number" id="numero-maximo" required min="2" value="2" step="1">
             </div>
             <button type="submit">Sortear número</button>
-        </form>
+        </form> 
     </main>
+    <script src="@@ENDERECO_DO_JS"></script>
 </body>
 </html>
